[package]
name = "twitch-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
tmi = "0.9.0"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
winnow = "0.7.4"
iroh-blobs = { version = "0.35.0", features = ["net_protocol"]}
dotenv = "0.15.0"
iroh = "0.35.0"
rand = "0.8.5"


[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false
panic = "abort"
